--- a/src/components/views/RegisterPage/RegisterPage.css
+++ b/src/components/views/RegisterPage/RegisterPage.css
@@ -20,9 +20,9 @@ a {
     flex-direction: column;
 }
 
-.login {
+.register {
     width: 30%;
-    height: 400px;
+    height: 600px;
     background: white;
     border-radius: 20px;
     display: flex;
@@ -32,14 +32,12 @@ a {
     margin-top: 30px;
 }
 
-.login_email,
-.login_pw {
+.register_label {
     margin-top: 20px;
     width: 100%;
 }
 
-.login_email input,
-.login_pw input {
+.register_label input {
     width: 100%;
     height: 50px;
     border-radius: 30px;
@@ -49,18 +47,18 @@ a {
     outline: none;
 }
 
-.register_mv {
+.register {
     padding: 20px;
     font-size: 14px;
     font-weight: bold;
     width: 30%;
 }
 
-.register_mv a {
+.register a {
     float: right;
 }
 
-.loginBtn {
+.registerBtn {
     margin-top: 40px;
     width: 100%;
     height: 50px;
